// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`timeInWords should work for future days 1`] = `
<span>
  in 5 days
</span>
`;

exports[`timeInWords should work for future hours 1`] = `
<span>
  in 5 hours
</span>
`;

exports[`timeInWords should work for future minutes 1`] = `
<span>
  in 5 minutes
</span>
`;

exports[`timeInWords should work for past days 1`] = `
<span>
  5 days ago
</span>
`;

exports[`timeInWords should work for past hours 1`] = `
<span>
  5 hours ago
</span>
`;

exports[`timeInWords should work for past minutes 1`] = `
<span>
  5 minutes ago
</span>
`;
